- Configurando la aplicacion.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">IUDapp</string>
-    <string name="action_update">Update</string>
+    <string name="action_update">Actualizar</string>
 </resources>
