- Estilizando componentes del ReciclerView de usuarios. - SwipeRefreshLayout añadido para refrescar la lista de usuarios.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">IUDapp</string>
     <string name="action_update">Actualizar</string>
+
+    <string name="cargando">Cargando</string>
+    <string name="espere_cargando">Espere, consultando…</string>
 </resources>
