--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
 
     <string name="cargando">Loading</string>
     <string name="espere_cargando">Wait, loading…</string>
+    <string name="eliminar_usuario">Delete</string>
+
+    <string name="editar_nombre_usuario">Name</string>
+    <string name="editar_nombre_usuario_titulo">Edit user</string>
+
+    <string name="boton_aceptar">Accept</string>
+    <string name="boton_cancelar">Cancel</string>
+
 </resources>
