--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,7 +7,11 @@
     <string name="eliminar_usuario">Eliminar</string>
 
     <string name="editar_nombre_usuario">Nombre</string>
-    <string name="editar_nombre_usuario_titulo">Editar usuario</string>
+    <string name="editar_birthdate_usuario">Nacimiento</string>
+    <string name="editar_usuario_titulo">Editar usuario</string>
+    <string name="crear_usuario_titulo">Crear usuario</string>
+    <string name="crear_usuario_error">Usuario no creado</string>
+    <string name="crear_usuario_snackbar">Crear</string>
 
     <string name="boton_aceptar">Aceptar</string>
     <string name="boton_cancelar">Cancelar</string>
