--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,11 @@
     <string name="eliminar_usuario">Delete</string>
 
     <string name="editar_nombre_usuario">Name</string>
-    <string name="editar_nombre_usuario_titulo">Edit user</string>
+    <string name="editar_birthdate_usuario">Birthdate</string>
+    <string name="editar_usuario_titulo">Edit user</string>
+    <string name="crear_usuario_titulo">Create user</string>
+    <string name="crear_usuario_error">User not created</string>
+    <string name="crear_usuario_snackbar">Create</string>
 
     <string name="boton_aceptar">Accept</string>
     <string name="boton_cancelar">Cancel</string>
