--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="editar_usuario_error">User not updated</string>
     <string name="editar_nombre_usuario_error">Empty name</string>
 
+    <!--Borrar usuario-->
+    <string name="alert_delete_user_title">Delete user</string>
+    <string name="alert_delete_user_message">Are you sure do you want to delete this user?</string>
+
     <!--Crear usuario-->
     <string name="crear_usuario_titulo">Create user</string>
     <string name="crear_usuario_error">User not created</string>
