--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,30 +1,30 @@
 <resources>
     <string name="app_name">IUDapp</string>
-    <string name="action_update">Actualizar</string>
 
     <!--Dialogos y alertas-->
     <string name="cargando">Cargando</string>
     <string name="espere_cargando">Espere, consultando…</string>
-    <string name="eliminar_usuario">Eliminar</string>
     <string name="mensaje_error_conn">Algo fue mal…</string>
+    <string name="mensaje_error_not_found">Usuario no encontrado…</string>
+    <string name="mensaje_error_internal">Error interno…</string>
     <string name="mensaje_error_refresh">Actualizar</string>
+    <string name="boton_aceptar">Aceptar</string>
+    <string name="boton_cancelar">Cancelar</string>
 
     <!--Editar usuario-->
     <string name="editar_nombre_usuario">Nombre</string>
     <string name="editar_birthdate_usuario">Nacimiento</string>
     <string name="editar_usuario_titulo">Editar usuario</string>
-    <string name="editar_usuario_error">Usuario no actualizado</string>
     <string name="editar_nombre_usuario_error">Nombre vacío</string>
+    <string name="editar_birthdate_usuario_error">Fecha vacía</string>
     <string name="editar_btn_deshacer">Deshacer</string>
 
     <!--Borrar usuario-->
     <string name="alert_delete_user_title">Borrar usuario</string>
     <string name="alert_delete_user_message">¿Seguro que quieres eliminar este usuario?</string>
+    <string name="eliminar_usuario">Eliminar</string>
 
     <!--Crear usuario-->
     <string name="crear_usuario_titulo">Crear usuario</string>
-    <string name="crear_usuario_error">Usuario no creado</string>
 
-    <string name="boton_aceptar">Aceptar</string>
-    <string name="boton_cancelar">Cancelar</string>
 </resources>
