--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,31 @@
 <resources>
     <string name="app_name">IUDapp</string>
-    <string name="action_update">Update</string>
 
     <!--Dialogos y alertas-->
     <string name="cargando">Loading</string>
     <string name="espere_cargando">Wait, loading…</string>
-    <string name="eliminar_usuario">Delete</string>
     <string name="mensaje_error_conn">Something went wrong…</string>
+    <string name="mensaje_error_not_found">Usuer not found…</string>
+    <string name="mensaje_error_internal">Internal error…</string>
     <string name="mensaje_error_refresh">Update</string>
+    <string name="boton_aceptar">Accept</string>
+    <string name="boton_cancelar">Cancel</string>
 
     <!--Editar usuario-->
     <string name="editar_nombre_usuario">Name</string>
     <string name="editar_birthdate_usuario">Birthdate</string>
     <string name="editar_usuario_titulo">Edit user</string>
-    <string name="editar_usuario_error">User not updated</string>
     <string name="editar_nombre_usuario_error">Empty name</string>
+    <string name="editar_birthdate_usuario_error">Empty birthdate</string>
     <string name="editar_btn_deshacer">Undo</string>
 
     <!--Borrar usuario-->
     <string name="alert_delete_user_title">Delete user</string>
     <string name="alert_delete_user_message">Are you sure do you want to delete this user?</string>
+    <string name="eliminar_usuario">Delete</string>
 
     <!--Crear usuario-->
     <string name="crear_usuario_titulo">Create user</string>
-    <string name="crear_usuario_error">User not created</string>
 
-    <string name="boton_aceptar">Accept</string>
-    <string name="boton_cancelar">Cancel</string>
 
 </resources>
