--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="boton_aceptar">Accept</string>
     <string name="boton_cancelar">Cancel</string>
 
-    <!--Editar usuario-->
+    <!--Editar user-->
     <string name="editar_nombre_usuario">Name</string>
     <string name="editar_birthdate_usuario">Birthdate</string>
     <string name="editar_usuario_titulo">Edit user</string>
@@ -19,12 +19,12 @@
     <string name="editar_birthdate_usuario_error">Empty birthdate</string>
     <string name="editar_btn_deshacer">Undo</string>
 
-    <!--Borrar usuario-->
+    <!--Borrar user-->
     <string name="alert_delete_user_title">Delete user</string>
     <string name="alert_delete_user_message">Are you sure do you want to delete this user?</string>
     <string name="eliminar_usuario">Delete</string>
 
-    <!--Crear usuario-->
+    <!--Crear user-->
     <string name="crear_usuario_titulo">Create user</string>
 
 
