--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,33 +2,33 @@
     <string name="app_name">IUDapp</string>
 
     <!--Dialogos y alertas-->
-    <string name="cargando">Loading</string>
-    <string name="espere_cargando">Wait, loading…</string>
+    <string name="dialogo_carga_titulo">Loading</string>
+    <string name="dialogo_carga_espere">Wait, loading…</string>
     <string name="mensaje_error_conn">Something went wrong…</string>
     <string name="mensaje_error_not_found">Usuer not found…</string>
     <string name="mensaje_error_internal">Internal error…</string>
     <string name="mensaje_error_refresh">Update</string>
-    <string name="boton_aceptar">Accept</string>
-    <string name="boton_cancelar">Cancel</string>
+    <string name="btn_aceptar">Accept</string>
+    <string name="btn_cancelar">Cancel</string>
 
     <!--Editar user-->
-    <string name="editar_nombre_usuario">Name</string>
-    <string name="editar_birthdate_usuario">Birthdate</string>
+    <string name="edt_nombre_usuario">Name</string>
+    <string name="edt_fecha_usuario">Birthdate</string>
     <string name="editar_usuario_titulo">Edit user</string>
     <string name="editar_nombre_usuario_error">Empty name</string>
-    <string name="editado_usuario_mensaje">User edited</string>
     <string name="editar_birthdate_usuario_error">Empty birthdate</string>
+    <string name="editado_usuario_mensaje">User edited</string>
     <string name="editar_btn_deshacer">Undo</string>
 
     <!--Borrar user-->
-    <string name="alert_delete_user_title">Delete user</string>
-    <string name="alert_delete_user_message">Are you sure do you want to delete this user?</string>
-    <string name="eliminar_usuario">Delete</string>
+    <string name="eliminar_usuario_titulo">Delete user</string>
+    <string name="eliminar_usuario_mensaje">Are you sure do you want to delete this user?</string>
+    <string name="btn_eliminar_usuario">Delete</string>
 
     <!--Crear user-->
     <string name="crear_usuario_titulo">Create user</string>
 
-    <string name="elije_letra">Choose a letter</string>
+    <string name="titulo_spinner_letras">Choose a letter</string>
     <string name="default_spinner_tag">All</string>
 
 </resources>
