--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -33,4 +33,9 @@
     <string name="titulo_spinner_letras">Elije una letra</string>
     <string name="default_spinner_tag">Todas</string>
 
+    <!--Dialogs-->
+    <string name="tv_getting_users">Cargando usuarios…</string>
+
+    <!--Errors-->
+    <string name="error_something_wrong">Algo fue mal, inténtalo de nuevo.</string>
 </resources>
