--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
 
     <!--Errors-->
     <string name="error_something_wrong">Something went wrong, try again.</string>
+    <string name="error_empty_fields">Invalid name or birthdate.</string>
 </resources>
